[gd_scene load_steps=26 format=3 uid="uid://83vno20f1xkb"]

[ext_resource type="Texture2D" uid="uid://b3hdnu3y8k6cq" path="res://assents/slimes_blue.png" id="1_rby7j"]
[ext_resource type="Script" path="res://Script/enemy_slime.gd" id="1_ud4ly"]

[sub_resource type="Animation" id="Animation_n5dur"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ndlpu"]
resource_name = "idle_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_leo55"]
resource_name = "idle_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_dfoiv"]
resource_name = "idle_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_tvdx0"]
resource_name = "idle_up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6tdcp"]
_data = {
"RESET": SubResource("Animation_n5dur"),
"idle_down": SubResource("Animation_ndlpu"),
"idle_left": SubResource("Animation_leo55"),
"idle_right": SubResource("Animation_dfoiv"),
"idle_up": SubResource("Animation_tvdx0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2ycga"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p834x"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1s7ev"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_646q6"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7ttla"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2ycga")
blend_point_0/pos = Vector2(0, -0.9)
blend_point_1/node = SubResource("AnimationNodeAnimation_p834x")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_1s7ev")
blend_point_2/pos = Vector2(0, 0.9)
blend_point_3/node = SubResource("AnimationNodeAnimation_646q6")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q2k1n"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_utsqu"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5py77"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kl5y1"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yr081"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_io83k"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oxjd4"]
animation = &"idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ip1v1"]
blend_point_0/node = SubResource("AnimationNodeAnimation_q2k1n")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_utsqu")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_5py77")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_kl5y1")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_yr081")
blend_point_4/pos = Vector2(-1, 0)
blend_point_5/node = SubResource("AnimationNodeAnimation_io83k")
blend_point_5/pos = Vector2(0, 1)
blend_point_6/node = SubResource("AnimationNodeAnimation_oxjd4")
blend_point_6/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jgvkn"]
states/Run/node = SubResource("AnimationNodeBlendSpace2D_7ttla")
states/Run/position = Vector2(449, 129)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_ip1v1")
states/idle/position = Vector2(453, 77)

[sub_resource type="CircleShape2D" id="CircleShape2D_w4avk"]
radius = 26.965

[sub_resource type="CircleShape2D" id="CircleShape2D_qota7"]
radius = 198.21

[sub_resource type="CircleShape2D" id="CircleShape2D_lguet"]
radius = 20.0111

[node name="Enemy_Slime" type="CharacterBody2D" node_paths=PackedStringArray("texture", "animation", "animationtree", "life") groups=["Enemy"]]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_ud4ly")
texture = NodePath("Sprite2D")
animation = NodePath("AnimationPlayer")
animationtree = NodePath("AnimationTree")
life = NodePath("lifebar/life")

[node name="lifebar" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -23.3333
offset_right = 20.0
offset_bottom = -17.3333

[node name="life" type="ColorRect" parent="lifebar"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 39.0
offset_bottom = 5.0
color = Color(1, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rby7j")
hframes = 6
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_6tdcp")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Sprite2D")
tree_root = SubResource("AnimationNodeStateMachine_jgvkn")
anim_player = NodePath("../AnimationPlayer")
parameters/Run/blend_position = Vector2(0, 0)
parameters/idle/blend_position = Vector2(0, 0)

[node name="Body_Damage" type="Area2D" parent="."]
position = Vector2(0, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body_Damage"]
visible = false
shape = SubResource("CircleShape2D_w4avk")
debug_color = Color(0.601067, 0.54105, 0.126029, 0.42)

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
visible = false
shape = SubResource("CircleShape2D_qota7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_lguet")

[connection signal="body_entered" from="Body_Damage" to="." method="_on_damage_body_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
